--- a/Scuola/Resources/Strings/Localizable.xcstrings
+++ b/Scuola/Resources/Strings/Localizable.xcstrings
@@ -37,9 +37,6 @@
     "Are you sure?" : {
 
     },
-    "Back" : {
-
-    },
     "Bio" : {
 
     },
@@ -53,6 +50,9 @@
 
     },
     "Branded Content" : {
+
+    },
+    "By clicking upload, you are agreeing to our terms and policy on uploading media to the Facto servers and database." : {
 
     },
     "By pressing 'Finish' you accept to our terms and conditions and privacy policy." : {
@@ -73,6 +73,9 @@
     "Cancel" : {
 
     },
+    "Category" : {
+
+    },
     "Comment" : {
 
     },
@@ -83,6 +86,12 @@
 
     },
     "Content Warning" : {
+
+    },
+    "Create" : {
+
+    },
+    "CREATE" : {
 
     },
     "Description" : {
@@ -118,6 +127,12 @@
     "Home" : {
 
     },
+    "Import failed" : {
+
+    },
+    "Inbox" : {
+
+    },
     "Language" : {
 
     },
@@ -145,13 +160,16 @@
     "Name" : {
 
     },
-    "NOT NIL" : {
-
-    },
     "Password" : {
 
     },
     "Posts" : {
+
+    },
+    "Preview" : {
+
+    },
+    "Preview Video" : {
 
     },
     "Private" : {
@@ -172,6 +190,9 @@
     "Screen Stream" : {
 
     },
+    "Select" : {
+
+    },
     "Settings" : {
 
     },
@@ -187,13 +208,13 @@
     "Stop" : {
 
     },
-    "Stream" : {
-
-    },
     "Stream Bigger" : {
 
     },
     "Stream Info" : {
+
+    },
+    "TEST UNKNOWN" : {
 
     },
     "This video kinda sucks lmao. I wish I could write a bigger comment because this is way too small for all the thoughts I have on my mind duhhhh. Oh my gosh this wasnt even big enough for the multiline shit" : {
