AWS Migration Part 4

--- a/Scuola/Resources/Strings/Localizable.xcstrings
+++ b/Scuola/Resources/Strings/Localizable.xcstrings
@@ -175,6 +175,9 @@
     "New Messages" : {
 
     },
+    "No prior messages!" : {
+
+    },
     "Older" : {
 
     },
@@ -212,6 +215,9 @@
 
     },
     "Select" : {
+
+    },
+    "Send a message..." : {
 
     },
     "Settings" : {
